--- a/index.html
+++ b/index.html
@@ -36,29 +36,103 @@
       </nav>
       <div class="slider">
         <div class="slider-container">
-          <div class="slide">
+          <div class="slide home">
             <div class="content">
               <div class="img"></div>
               <div class="text">
-                <h2>ibrahim bakry</h2>
+                <h2 class="main-title">ibrahim bakry</h2>
                 <p>keep your website simple and easy to navigate.</p>
                 <p>
-                  please take a look at my wesite to see template collections
+                  please take a look at my website to see template collections
                   for you.
                 </p>
-                <a href="#" class="read-more">read more</a>
-                <a href="#">my fb page</a>
+                <div class="btns">
+                  <a href="#" class="read-more">
+                    <span>read more</span>
+                    <span>read more</span>
+                  </a>
+                  <a href="#" class="social">
+                    <span> my fb page</span>
+                    <span> my fb page</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slide about">
+            <div class="content">
+              <div class="text">
+                <h2 class="main-title">about me</h2>
+                <p>My name is ibrahim bakry</p>
+                <p>I'm webdevoloper master</p>
+                <p>Workhard anywhere, is the motto of me</p>
+                <div class="skills">
+                  <div class="title"><h2 class="main-title">my skills</h2></div>
+                  <div class="html">
+                    <span>html</span>
+                    <div
+                      class="progress"
+                      style="--prog: 95%;"
+                      data-progress="95%"
+                    ></div>
+                  </div>
+                  <div class="css">
+                    <span>css</span>
+                    <div
+                      class="progress"
+                      style="--prog: 95%;"
+                      data-progress="95%"
+                    ></div>
+                  </div>
+                  <div class="js">
+                    <span>js</span>
+                    <div
+                      class="progress"
+                      style="--prog: 85%;"
+                      data-progress="85%"
+                    ></div>
+                  </div>
+                  <div class="bootstrap">
+                    <span>bootstrap</span>
+                    <div
+                      class="progress"
+                      style="--prog: 90%;"
+                      data-progress="80%"
+                    ></div>
+                  </div>
+                </div>
+              </div>
+              <div class="img"></div>
+            </div>
+          </div>
+          <div class="slide viewer">
+            <div class="works">
+              <div class="work" style="--img: url(../img/works/work1.webp);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work2.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work3.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work4.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work5.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work6.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
+              </div>
+              <div class="work" style="--img: url(../img/works/work7.jpg);">
+                <div class="view"><ion-icon name="eye"></ion-icon></div>
               </div>
             </div>
           </div>
           <div class="slide">
-            <p class="test">About</p>
-          </div>
-          <div class="slide">
-            <p class="test">work</p>
-          </div>
-          <div class="slide">
             <p class="test">contact</p>
+            <div class="svg"></div>
           </div>
         </div>
       </div>
