--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
                     <span>read more</span>
                     <span>read more</span>
                   </a>
-                  <a href="#" class="social">
+                  <a
+                    href="https://www.facebook.com/ibrahim.abozad.HE/"
+                    target="_blank"
+                    class="social"
+                  >
                     <span> my fb page</span>
                     <span> my fb page</span>
                   </a>
@@ -102,7 +106,9 @@
                   </div>
                 </div>
               </div>
-              <div class="img"></div>
+              <div class="img">
+                <img src="/img/SEOanalyticsteam-bro.svg" alt="" />
+              </div>
             </div>
           </div>
           <div class="slide viewer">
@@ -130,9 +136,37 @@
               </div>
             </div>
           </div>
-          <div class="slide">
-            <p class="test">contact</p>
-            <div class="svg"></div>
+          <div class="slide contact">
+            <div class="content">
+              <div class="img"></div>
+              <form class="form">
+                <div class="text">
+                  <input type="text" required="required" />
+                  <label>Your name</label>
+                </div>
+                <div class="email">
+                  <input type="email" required="required" />
+                  <label>Your email</label>
+                </div>
+                <div class="subjuct">
+                  <input type="subjuct" required="required" />
+                  <label>Your subjuct</label>
+                </div>
+                <div class="textarea">
+                  <textarea required="required"></textarea>
+                  <label>Your message</label>
+                </div>
+                <input type="submit" class="send" value="Send Massage" />
+                <p>
+                  Or Call Me:
+                  <a
+                    href="https://wa.me/201275271385?text=Hello%20I%20Am%20Ibrahim%20Bakry%20For%20webdevoloper%20"
+                    target="_blank"
+                    >+201275271385
+                  </a>
+                </p>
+              </form>
+            </div>
           </div>
         </div>
       </div>
