--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div class="img">
-                <img src="/img/SEOanalyticsteam-bro.svg" alt="" />
+                <img src="/img/seo.svg" alt="" />
               </div>
             </div>
           </div>
