--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
   </head>
   <body>
     <div class="container">
+      <div class="social">
+        <div class="mobile">
+          call me at: <span>+201275271385</span> or
+          <span>+201065354530</span>
+        </div>
+        <div class="web">
+          <a target="_blank" href="https://www.facebook.com/ibrahim.abozad.HE/"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a target="_blank" href="https://github.com/ibrahimm2022"
+            ><ion-icon name="logo-github"></ion-icon
+          ></a>
+          <a
+            target="_blank"
+            href="https://wa.me/201275271385?text=Hello%20I%20Am%20Ibrahim%20Bakry%20For%20webdevoloper%20"
+            ><ion-icon name="logo-whatsapp"></ion-icon
+          ></a>
+          <a target="_blank" href="mailto:ibrahimbakry.125@gmail.com"
+            ><img src="./img/icons/gmail.svg" alt="gmail"
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/ibrahim-bakry-491928179/"
+            ><ion-icon name="logo-linkedin"></ion-icon
+          ></a>
+        </div>
+      </div>
       <nav class="nav-bar">
         <div class="logo">
           <h1>port<span>folio</span></h1>
@@ -66,13 +93,49 @@
           <div class="slide about">
             <div class="content">
               <div class="text">
-                <h2 class="main-title">about me</h2>
+                <h2 class="main-title">about myself</h2>
                 <p>My name is ibrahim bakry</p>
-                <p>I'm webdevoloper master</p>
+                <p>
+                  Front End Developer I Always Try To Develop Myself And Invest
+                  In My Capabilities And Satisfy My Client Or The Organization
+                  To Which I Belong .
+                </p>
                 <p>Workhard anywhere, is the motto of me</p>
                 <div class="skills">
                   <div class="title"><h2 class="main-title">my skills</h2></div>
-                  <div class="html">
+                  <div class="slide-skills">
+                    <div class="slide-skcontainer">
+                      <div class="html">
+                        <ion-icon name="logo-html5"></ion-icon>
+                        <span>HTML</span>
+                      </div>
+                      <div class="css">
+                        <ion-icon name="logo-css3"></ion-icon>
+                        <span>CSS</span>
+                      </div>
+                      <div class="jq">
+                        <img src="./img/icons/jquery.svg" alt="jquery" />
+                        <span>Jquery</span>
+                      </div>
+                      <div class="js">
+                        <ion-icon name="logo-nodejs"></ion-icon>
+                        <span>Java Script</span>
+                      </div>
+                      <div class="strap">
+                        <img src="./img/icons/bootstrap.svg" alt="bootstrap" />
+                        <span>Bootstrap</span>
+                      </div>
+                      <div class="sass">
+                        <ion-icon name="logo-sass"></ion-icon>
+                        <span>Sass (Basic)</span>
+                      </div>
+                      <div class="git">
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Git & GitHub</span>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div class="html">
                     <span>html</span>
                     <div
                       class="progress"
@@ -103,36 +166,103 @@
                       style="--prog: 90%;"
                       data-progress="80%"
                     ></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="img">
-                <img src="/img/seo.svg" alt="" />
+                <img src=".//img/seo.svg" alt="" />
               </div>
             </div>
           </div>
           <div class="slide viewer">
             <div class="works">
               <div class="work" style="--img: url(../img/works/work1.webp);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://directoryads-123.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work2.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://kasper-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work3.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://illi-restaurant-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work4.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://house-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work5.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://gallery-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work6.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://videographic-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
               <div class="work" style="--img: url(../img/works/work7.jpg);">
-                <div class="view"><ion-icon name="eye"></ion-icon></div>
+                <a
+                  href="https://webhost-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
+              </div>
+              <div class="work" style="--img: url(../img/works/work8.jpg);">
+                <a
+                  href="https://register-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
+              </div>
+              <div class="work" style="--img: url(../img/works/work9.jpg);">
+                <a
+                  href="https://waterlogin-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
+              </div>
+              <div class="work" style="--img: url(../img/works/work10.jpg);">
+                <a
+                  href="https://flowe-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
+              </div>
+              <div class="work" style="--img: url(../img/works/work11.jpg);">
+                <a
+                  href="https://clock-he.netlify.app"
+                  target="_blank"
+                  class="view"
+                  ><ion-icon name="eye"></ion-icon
+                ></a>
               </div>
             </div>
           </div>
@@ -141,6 +271,11 @@
               <div class="img"></div>
               <form class="form">
                 <div class="text">
+                  <h2 class="main-title">contact</h2>
+                  <p>You Will Receive A Reply As Soon As Possible.</p>
+                </div>
+
+                <div class="name">
                   <input type="text" required="required" />
                   <label>Your name</label>
                 </div>
@@ -171,6 +306,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="cop">
+        design by <a href="index.html">ibrahim bakry</a> copyright © 2023
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
