--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             <ion-icon name="person"></ion-icon><span> About</span>
           </li>
           <li class="link" data-index="2">
-            <ion-icon name="image"></ion-icon><span>work</span>
+            <ion-icon name="cog-outline"></ion-icon><span>services</span>
           </li>
           <li class="link" data-index="3">
+            <ion-icon name="image"></ion-icon><span>work</span>
+          </li>
+          <li class="link" data-index="4">
             <ion-icon name="mail"></ion-icon><span>contact</span>
           </li>
         </ul>
@@ -171,6 +174,60 @@
               </div>
               <div class="img">
                 <img src=".//img/seo.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="slide services">
+            <div class="title">
+              <h2 class="main-title">services</h2>
+            </div>
+            <div class="srv-container">
+              <div class="srv srv1">
+                <div class="icon">
+                  <ion-icon name="code-slash-outline"></ion-icon>
+                </div>
+                <div class="text">
+                  <h2>web design</h2>
+                  <p>
+                    converting the psd design to an interactive website using
+                    (html, css, javascript).
+                  </p>
+                </div>
+              </div>
+              <div class="srv srv2">
+                <div class="icon">
+                  <ion-icon name="person-outline"></ion-icon>
+                </div>
+                <div class="text">
+                  <h2>personal websites</h2>
+                  <p>
+                    build a personal website to display experience, projects and
+                    contact information.
+                  </p>
+                </div>
+              </div>
+              <div class="srv srv3">
+                <div class="icon">
+                  <ion-icon name="laptop-outline"></ion-icon>
+                </div>
+                <div class="text">
+                  <h2>responsive</h2>
+                  <p>
+                    building responsive websites with frameworks or without.
+                  </p>
+                </div>
+              </div>
+              <div class="srv srv4">
+                <div class="icon">
+                  <ion-icon name="construct-outline"></ion-icon>
+                </div>
+                <div class="text">
+                  <h2>technical support</h2>
+                  <p>
+                    providing technical support after delivery and answering
+                    questions.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
